🐎 ci(config): save npm/yarn configs

--- a/client/src/recursive_backtracker/asc/package.json
+++ b/client/src/recursive_backtracker/asc/package.json
@@ -6,7 +6,8 @@
     "test": "node tests"
   },
   "dependencies": {
-    "@assemblyscript/loader": "^0.19.17"
+    "@assemblyscript/loader": "^0.19.17",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "assemblyscript": "^0.19.18"
