--- a/server/wasm/asc/package.json
+++ b/server/wasm/asc/package.json
@@ -8,11 +8,10 @@
   },
   "dependencies": {
     "@assemblyscript/loader": "^0.19.17",
-    "fs": "^0.0.1-security",
+    "assemblyscript": "^0.19.18",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
-    "as-wasi": "^0.4.6",
-    "assemblyscript": "^0.19.18"
+    "as-wasi": "^0.4.6"
   }
 }
