--- a/server/wasm/asc/package.json
+++ b/server/wasm/asc/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "asbuild:untouched": "asc assembly/index.ts --target debug",
-    "asbuild:optimized": "asc assembly/index.ts --target release",
+    "asbuild:optimized": "asc assembly/index.ts --target release --initialMemory 2",
     "asbuild": "run-s asbuild:*",
     "start": "wasmtime run build/optimized.wasm",
     "test": "node tests"
