--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "as-bind": "^0.8.2",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-as-bind": "^0.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
