--- a/server/wasm/rs/Cargo.toml
+++ b/server/wasm/rs/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 wasm-bindgen = "0.2.78"
 fastrand = "1.5.0"
+wasm-bindgen-test = "0.3.28"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
