--- a/server/wasm/rs/Cargo.toml
+++ b/server/wasm/rs/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.4"
+getrandom = { version = "0.2.3", features = ["js"] }
 wasm-bindgen = "0.2.78"
-fastrand = "1.5.0"
 wasm-bindgen-test = "0.3.28"
 
 [lib]
