✨ feat(WasmApi): link rust code

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@assemblyscript/loader": "^0.19.17",
     "@babel/core": "^7.16.0",
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,19 +14,20 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "as-bind": "^0.8.2",
+    "maze-mansion-rbt-rs": "^0.1.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "rs_bg": "file:./wasm/pkg/",
     "typescript": "^4.1.2",
     "use-as-bind": "^0.1.0",
+    "wasm-loader": "^1.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
