--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+opt-level = 's'
+
 [dependencies]
 lazy_static = "1.0"
 
 [lib]
+path = "src/lib.rs"
 crate-type = ["cdylib", "rlib"]
