--- a/server/wasm/package.json
+++ b/server/wasm/package.json
@@ -7,9 +7,7 @@
     "test": "node tests"
   },
   "dependencies": {
-    "@assemblyscript/loader": "^0.19.17",
-    "assemblyscript": "^0.19.18",
-    "npm-run-all": "^4.1.5"
+    "@assemblyscript/loader": "^0.19.17"
   },
   "devDependencies": {
     "as-wasi": "^0.4.6"
