✨ feat(Global): add langs

--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "./src/app.ts",
   "scripts": {
     "client": "cd ../client && npm run start",
-    "server": "nodemon app.ts",
+    "server": "nodemon ./src/app.ts",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
